[package]
name = "edenlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.9.5"
rfesi = "0.18.0"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }
tui = "0.19.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
