[package]
name = "edenlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
solarized = { git = "https://github.com/archification/solarized.git", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
